ubiquity (1.5.15) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Fixed backup in the UI wrt the new page turning code.

  [ Colin Watson ]
  * Start ubiquity init script at 29; don't bother stopping it.

  [ Michael Haas ]
  * Allow VNC to be selected with foreign locales in mythbuntu
    interface. (LP: #136482)

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 11 Sep 2007 18:18:27 -0400

ubiquity (1.5.14) gutsy; urgency=low

  [ Mario Limonciello ]
  * Rework proprietary drivers page.  Include openchrome and nvidia legacy
    support.  Drop restricted-manager --check and --list.

  [ Evan Dandrea ]
  * Fixed a typo in noninteractive check.

  [ Colin Watson ]
  * Call update-rc.d so that automatic-ubiquity stands a chance of working.
  * Automatic update of included source packages: grub-installer
    1.24ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Sep 2007 20:16:42 +0100

ubiquity (1.5.13) gutsy; urgency=low

  [ Mario Limonciello ]
  * Correct typo in HDHomerun application.
  * Make sure that backend_configured happens for right user.
  * Re-order installer so Mythbuntu steps appear at a different time.
  * Make sure errno errors can be reported properly in mythbuntu_install.py
    (LP: #130771)

  [ Evan Dandrea ]
  * The migration-assistant page will now be skipped if there are no
    partitions able to be imported from.
  * Initialize self.errors in migration-assistant (LP: #134254).
  * Add a progress bar for automatic mode.
  * Update noninteractive frontend to work with recent changes.
  * Temporary fix for the language packs no longer installing bug (LP:
    #131294)

  [ Colin Watson ]
  * If 'automatic-ubiquity' is on the kernel command line, start Ubiquity in
    its own X session. Thanks to Agostino Russo for the prototype of this.
  * Just call 'reboot' rather than gdm/kdm-specific reboot methods if
    DESKTOP_SESSION isn't set in the environment.
  * Automatic update of included source packages: apt-setup 1:0.21ubuntu3,