@@ -9,3 +9,7 @@ ubiquity/components/mythbuntu*.py usr/lib/ubiquity/ubiquity/components
 #GTK/glade
 ubiquity/frontend/mythbuntu_ui.py usr/lib/ubiquity/ubiquity/frontend
 gui/glade/mythbuntu*.glade usr/share/ubiquity/glade
+
+#Desktop install file
+desktop/ubiquity-mythbuntu.desktop usr/share/applications
+desktop/ubiquity-mythbuntu.png usr/share/pixmaps
