@@ -1,0 +1,12 @@
+[Desktop Entry]
+Type=Application
+Version=1.0
+Encoding=UTF-8
+_Name=Install
+_Comment=Install this system permanently to your hard disk
+Exec=ubiquity --desktop %k mythbuntu_ui
+Icon=ubiquity-mythbuntu.png
+Terminal=false
+Categories=GTK;System;Settings;
+OnlyShowIn=GNOME;XFCE;
+#X-Ubuntu-Gettext-Domain=ubiquity
